save completed dom practice

--- a/q4_more_manipulation/index.html
+++ b/q4_more_manipulation/index.html
@@ -14,8 +14,12 @@
       <h1>My Todo List!</h1>
       <ul>
         <li><span id="important">Wash the car</span></li>
-        <li id="top"><span class="todo">Buy lottery</span></li>
-        <li id="urgent"><span class="todo">Clean the windows</span></li>
+        <li id="top">
+          <span class="todo">Buy lottery</span>
+        </li>
+        <li id="urgent">
+          <span class="todo">Clean the windows</span>
+        </li>
         <li class="todo">Do laundry</li>
         <li class="todo">Walk the dog</li>
         <li class="finished">Pay the bills</li>
