--- a/q9_basic_form_manipulation/index.html
+++ b/q9_basic_form_manipulation/index.html
@@ -16,11 +16,11 @@
         </div>
         <div>
                 <label>Handphone brand/model</label>
-                <input type="radio" class="phone-type" value="iphone-old"/>iPhone 7 or older
-                <input type="radio" class="phone-type" value="iphone-new"/>iPhone 8 or newer
-                <input type="radio" class="phone-type" value="samsung-old"/>Samsung Galaxy 9 or older
-                <input type="radio" class="phone-type" value="samsung-new"/>Samsung Galaxy 9+ or newer
-                <input type="radio" class="phone-type" value="other-android"/>Other Android brand/models
+                <input type="radio" class="phone-type" name ="brand" value="iphone-old"/>iPhone 7 or older
+                <input type="radio" class="phone-type" name ="brand" value="iphone-new"/>iPhone 8 or newer
+                <input type="radio" class="phone-type" name ="brand" value="samsung-old"/>Samsung Galaxy 9 or older
+                <input type="radio" class="phone-type" name ="brand" value="samsung-new"/>Samsung Galaxy 9+ or newer
+                <input type="radio" class="phone-type" name ="brand" value="other-android"/>Other Android brand/models
         </div>
         <div>
             <label>What sort of services do you need?</label>
