--- a/r2q2_Dice_Throw/index.html
+++ b/r2q2_Dice_Throw/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="container">
       <div class="box">0</div>
-      <div>Result:<span>0</span></div>
+      <div">Result:<span>0</span></div>
       <div class="box">0</div>
     </div>
     <button>Roll</button>
