--- a/r2q4_Flying/index.html
+++ b/r2q4_Flying/index.html
@@ -9,22 +9,23 @@
   <body>
     <div class="form">
       <div>
-        <input type="text" placeholder="First name" />
+        <input type="text" id="fName" placeholder="First name" />
       </div>
       <div>
-        <input type="text" placeholder="Last name" />
+        <input type="text" id="lName" placeholder="Last name" />
       </div>
       <div>
         <label>Ticket Class:</label>
-        <input type="radio" />First Class <input type="radio" />Business Class
-        <input type="radio" />Economy
+        <input type="radio" name="ticketClasses" class="ticketClasses" value="firstClass"/>First Class 
+        <input type="radio" name="ticketClasses" class="ticketClasses" value="businessClass"/>Business Class
+        <input type="radio" name="ticketClasses" class="ticketClasses" value="economyClass"/>Economy
       </div>
       <div>
         <label>Options:</label>
-        <input type="checkbox" />In-flight Meal
-        <input type="checkbox" />Free-flow drinks
-        <input type="checkbox" />In-flight entertainment
-        <input type="checkbox" />Extra luggage space
+        <input type="checkbox" class="flightOptions" value="inFlightMeal"/>In-flight Meal
+        <input type="checkbox" class="flightOptions" value="freeFlowDrinks"/>Free-flow drinks
+        <input type="checkbox" class="flightOptions" value="inFlightEnt"/>In-flight entertainment
+        <input type="checkbox" class="flightOptions" value="extraLuggageSpace"/>Extra luggage space
       </div>
       <button>Place booking</button>
     </div>
